--- a/core/templates/core/doctor_form.html
+++ b/core/templates/core/doctor_form.html
@@ -63,25 +63,41 @@
           <label for="id_nom" class="form-label">Nom</label>
           {{ form.nom }}
         </div>
+
         <!-- Prénom -->
         <div class="mb-3">
           <label for="id_prenom" class="form-label">Prénom</label>
           {{ form.prenom }}
         </div>
+
         <!-- Spécialité -->
         <div class="mb-3">
           <label for="id_specialite" class="form-label">Spécialité</label>
           {{ form.specialite }}
         </div>
+
         <!-- Email -->
         <div class="mb-3">
           <label for="id_email" class="form-label">Email</label>
           {{ form.email }}
         </div>
+
         <!-- Téléphone -->
         <div class="mb-4">
           <label for="id_telephone" class="form-label">Téléphone</label>
           {{ form.telephone }}
+        </div>
+
+        <!-- Nom du Quartier -->
+        <div class="mb-3">
+          <label for="id_quartier_nom" class="form-label">Nom du Quartier</label>
+          {{ form.quartier_nom }}
+        </div>
+
+        <!-- Ville du Quartier -->
+        <div class="mb-3">
+          <label for="id_quartier_ville" class="form-label">Ville du Quartier</label>
+          {{ form.quartier_ville }}
         </div>
 
         <!-- Boutons d'action -->
