--- a/client_app/static/css/styles.css
+++ b/client_app/static/css/styles.css
@@ -66,11 +66,11 @@ p { animation-delay: 0.7s; }
     overflow: hidden;
     background: rgba(255, 255, 255, 0.97);
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-    color: #333;
+    color: #0d0a0a;
 }
 
 .card .card-body {
-    color: #333;
+    color: #120f0f;
 }
 
 .card:nth-child(even) { animation-delay: 0.6s; }
